--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.2
+  intl: ^0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
