--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,5 +29,19 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+      <queries>
+          <intent>
+              <action android:name="android.intent.action.VIEW" />
+              <data android:scheme="sms" />
+          </intent>
+          <intent>
+              <action android:name="android.intent.action.VIEW" />
+              <data android:scheme="tel" />
+          </intent>
+          <intent>
+              <action android:name="android.intent.action.VIEW" />
+              <data android:scheme="geo" />
+          </intent>
+      </queries>
     </application>
 </manifest>
